2008-04-09  Michal Ludvig  <michal@logix.cz>

	* Migrated from CVS to SVN

2007-03-29  Michal Ludvig  <michal@logix.cz>

	* Update NEWS and configure.in to release 0.4.0-rc1

2007-03-29  Michal Ludvig  <michal@logix.cz>

	* Reworked data storage. Instead of one huge record 
	  for each file in table "data" we now store the data 
	  in 4kB chunks (a.k.a. "sectors" or "blocks"). That 
	  speeds up especially updates to files a _lot_ :-)
	  As a side effect it allows for storing "sparse" files.
	  CAUTION: database schema has changed in this version!

2006-10-03  Michal Ludvig  <michal@logix.cz>

	* Updated version to 0.3.1
	* Added schema.sql to the distribution tarball. Oops!

2006-09-23  Michal Ludvig  <michal@logix.cz>

	* Updated version to 0.3
	* Updated auxiliary files (README, TODO, ...)

2006-09-23  Michal Ludvig  <michal@logix.cz>

	* Create root directory on startup if it doesn't exist.
	* Changed timestamp fields in 'inodes' table to 'int
	  unsigned' to avoid conversion between MYSQL timestamp and 
	  Unix timestamp in a number of queries.
	* Updated schema.sql. Now with autocreating '/' it's enough 
	  to use 'mysqldump -d' i.e. dump just the schema without
	  data.

2006-09-17  Michal Ludvig  <michal@logix.cz>

	* pool.c: Rewritten from scratch. It doesn't have a limit
	  on open connections anymore and instead creates new ones
	  on request. Returned connections are not immediately 
	  closed, instead put into a LIFO-type stack and reused
	  later. Maximum number of connections idling on the stack 
	  can be set as well as the initial number of connections
	  opened on start.
	  This rewrite triggered search-and-replace changes
	  in mysqlfs.c (no more MYSQL_CONN type). Instead I return
	  the connection itself (MYSQL*) though typed as (void*) -  
	  probably not the best choice. The intent was to
	  prepare for support of other DBs. It works for now but 
	  I'll likely rewrite or improve this later ;-) 
	  
2006-09-15  Michal Ludvig  <michal@logix.cz>